@@ -7,7 +7,7 @@ import yaml
 import os
 
 DEBUG = False
-version = "0.3.35"
+version = "0.3.36"
 
 def debug(msg):
     if DEBUG:
